--- a/gobotany/static/sass/_popups.scss
+++ b/gobotany/static/sass/_popups.scss
@@ -17,7 +17,7 @@
             font-size: 24px;
             font-style: italic;
             margin-bottom: 0;
-            margin-left: 245px;
+            margin-left: 255px;
             span {
                 color: #807121;
                 font-size: 16px;
